# worktree

./: FUMADOCS.md  README.md  specs_plan.md
apps/web/: .eslintrc.json  .gitignore  Features_plan.md  Website_Content_Update_Plan.md  next.config.mjs  package.json  source.config.ts  tsconfig.json
crates/worktree-admin/: COMPONENTS.md  Cargo.toml  Implementation.md  README.md  Trunk.toml  index.html
crates/worktree-admin/src/: api.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs  types.rs  ui.rs  utils.rs
crates/worktree-admin/src/components/: badge.rs  button.rs  card.rs  footer.rs  loading.rs  mod.rs  navbar.rs  repo_card.rs  stat_card.rs
crates/worktree-admin/styles/: main.css  variables.css
crates/worktree-cli/: Cargo.toml  Implementation.md
crates/worktree-cli/src/: main.rs
crates/worktree-cli/src/commands/: archive.rs  branch.rs  config.rs  depend.rs  diff.rs  git.rs  ignore.rs  init.rs  log.rs  merge.rs  mod.rs  permission.rs  reflog.rs  revert.rs  server.rs  snapshot.rs  staged.rs  status.rs  sync.rs  tag.rs  tree.rs
crates/worktree-cli/src/output/: color.rs  format.rs  mod.rs
crates/worktree-git/: Cargo.toml  Implementation.md
crates/worktree-git/src/: error.rs  lib.rs
crates/worktree-git/src/config/: gitattributes.rs  gitignore.rs  mod.rs
crates/worktree-git/src/export/: builder.rs  converter.rs  mod.rs  squash.rs  submodule.rs
crates/worktree-git/src/hash_index/: store.rs
crates/worktree-git/src/import/: converter.rs  mod.rs  repo.rs  submodule.rs  walker.rs
crates/worktree-git/src/remote/: auth.rs  mirror.rs  mod.rs  pull.rs  push.rs  transport.rs
crates/worktree-protocol/: Cargo.toml  Implementation.md
crates/worktree-protocol/specs/: README.md  WorkTree.md
crates/worktree-protocol/specs/bgprocess/: BgProcess.md
crates/worktree-protocol/specs/dot-wt/: DotWt.md
crates/worktree-protocol/specs/dot-wt-tree/: DotWtTree.md
crates/worktree-protocol/specs/iam/: DeclarativeAccess.md  IAM.md  TenantModel.md
crates/worktree-protocol/specs/licensing/: LicenseCompliance.md
crates/worktree-protocol/specs/security/: Security.md
crates/worktree-protocol/specs/server/: Server.md
crates/worktree-protocol/specs/storage/: Storage.md
crates/worktree-protocol/specs/sync/: Sync.md
crates/worktree-protocol/specs/tree/: Tree.md
crates/worktree-protocol/specs/visibility/: StagedVisibility.md
crates/worktree-protocol/src/: lib.rs
crates/worktree-protocol/src/access/: branch_access.rs  mod.rs  resource.rs  tree_access.rs
crates/worktree-protocol/src/config/: hierarchy.rs  mod.rs  tree_config.rs  worktree_config.rs
crates/worktree-protocol/src/core/: error.rs  hash.rs  id.rs  mod.rs
crates/worktree-protocol/src/iam/: account.rs  engine.rs  mod.rs  permission.rs  policy.rs  role.rs  scope.rs  session.rs  team.rs  tenant.rs
crates/worktree-protocol/src/object/: blob.rs  branch.rs  delta.rs  dependency.rs  manifest.rs  merge_request.rs  mod.rs  reflog.rs  release.rs  snapshot.rs  staged.rs  tag.rs  tree.rs
crates/worktree-sdk/: Cargo.toml  Implementation.md
crates/worktree-sdk/src/: error.rs  lib.rs
crates/worktree-sdk/src/engine/: branch.rs  config.rs  dependency.rs  diff.rs  ignore.rs  init.rs  log.rs  merge.rs  mod.rs  reflog.rs  snapshot.rs  status.rs  sync.rs  tag.rs  tree.rs
crates/worktree-server/: Cargo.toml  Implementation.md
crates/worktree-server/src/: error.rs  lib.rs  main.rs
crates/worktree-server/src/config/: mod.rs  settings.rs
crates/worktree-server/src/engine/: auto_branch.rs  auto_commit.rs  event.rs  mod.rs  rules.rs
crates/worktree-server/src/git/: export.rs  import.rs  mirror.rs  mod.rs  remote.rs  submodule.rs
crates/worktree-server/src/service/: daemon.rs  health.rs  install.rs  mod.rs
crates/worktree-server/src/storage/: backend.rs  disk.rs  index.rs  mod.rs
crates/worktree-server/src/watcher/: debounce.rs  fs.rs  mod.rs
docs/: README.md  admin-panel.md  cli-reference.md  git-compatibility.md  protocol-spec.md  sdk-guide.md  server-architecture.md
docs/video/: 00_PRODUCTION_BIBLE.md  01_DESIGN_SYSTEM.md  02_SCENE_COLD_OPEN.md  03_SCENE_TITLE_CARD.md  04_SCENE_ACT_I_HISTORY.md  05_SCENE_ACT_II_PROBLEMS.md  06_SCENE_ACT_III_PRODUCT.md  07_SCENE_ACT_IV_DEMO.md  08_SCENE_CLOSE.md  09_ANIMATION_COMPONENTS.md  10_AUDIO_SPEC.md  11_ASSET_MANIFEST.md  12_SOCIAL_CUTS.md  W0RKTREE_VIDEO_STORYBOARD.md
scripts/: ci.sh  install.ps1  install.sh
(+93 files in other folders)
